@@ -1,3 +1,6 @@
+Sun Jan 19 2014 Aleksey
+	renamed perl module to the Crypt::Rhash
+
 Tue Sep 17 2013 Aleksey
 	* === Version 1.3.0 ===
 
